[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://fonts/e-Ukraine/e-Ukraine-Medium.otf" type="DynamicFontData" id=2]
[ext_resource path="res://icons/back-white.svg" type="Texture" id=3]
[ext_resource path="res://icons/edit-icon-18-512.svg" type="Texture" id=4]
[ext_resource path="res://scenes/Note.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=5]
size = 36
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 25.0
content_margin_right = 25.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=7]
size = 20
use_filter = true
font_data = ExtResource( 2 )

[node name="Note" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10

[node name="Control" type="Control" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )

[node name="Control" type="Control" parent="VBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 11.0
margin_right = -30.0

[node name="BackButton" type="Button" parent="VBoxContainer/Control/Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -19.5
margin_right = 137.0
margin_bottom = 19.5
mouse_default_cursor_shape = 2
theme = ExtResource( 1 )
text = "Назад"
icon = ExtResource( 3 )
expand_icon = true

[node name="EditButton" type="Button" parent="VBoxContainer/Control/Control"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -147.0
margin_top = -19.5
margin_bottom = 19.5
mouse_default_cursor_shape = 2
theme = ExtResource( 1 )
text = "Змінити"
icon = ExtResource( 4 )
expand_icon = true

[node name="Control2" type="Control" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/Control2"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Control2/ScrollContainer"]
margin_right = 1024.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="Control" parent="VBoxContainer/Control2/ScrollContainer/HBoxContainer"]
margin_right = 150.0
margin_bottom = 540.0
rect_min_size = Vector2( 150, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Control2/ScrollContainer/HBoxContainer"]
margin_left = 154.0
margin_right = 870.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="title" type="Label" parent="VBoxContainer/Control2/ScrollContainer/HBoxContainer/VBoxContainer"]
margin_right = 716.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Заголовок"
autowrap = true

[node name="content" type="Label" parent="VBoxContainer/Control2/ScrollContainer/HBoxContainer/VBoxContainer"]
margin_top = 69.0
margin_right = 716.0
margin_bottom = 540.0
size_flags_vertical = 3
custom_colors/font_color = Color( 0.552941, 0.552941, 0.552941, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 6 )
text = "Це контент замітки"
autowrap = true

[node name="Control2" type="Control" parent="VBoxContainer/Control2/ScrollContainer/HBoxContainer"]
margin_left = 874.0
margin_right = 1024.0
margin_bottom = 540.0
rect_min_size = Vector2( 150, 0 )

[connection signal="visibility_changed" from="." to="." method="_on_Note_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/Control/Control/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Control/Control/EditButton" to="." method="_on_EditButton_pressed"]
